--- a/Proyecto 2/project-2/src/app/interpeter/interpeter.component.html
+++ b/Proyecto 2/project-2/src/app/interpeter/interpeter.component.html
@@ -24,6 +24,11 @@
       <button type="button" (click)="onClickParser()">Parser</button>
     </div>
   </div>
+
+  <div class="row">
+    <div id="graph"></div>
+  </div>
+
   <div class="row">
     <table class="table">
       <thead>
